# scientists-project

./: .gitignore  README.md  app.py  db.json
backend/: .gitignore  Dockerfile.dev  README.md  app.py  docker-compose.dev.yml  main.py  package-lock.json  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py
backend/app/models/: __init__.py  scientist_model.py
backend/app/routes/: scientist_crud.py
backend/app/services/: __init__.py  scientist_service.py
backend/config_db/: Dockerfile  create.sql
backend/docker/: Dockerfile.dev  docker-compose.dev.yml
frontend/: .gitignore  index.html  main.py  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: Card.vue  Footer.vue  NavBar.vue
frontend/src/data/: db.js
frontend/src/router/: index.js
frontend/src/views/: About.vue  Contact.vue  Home.vue
frontend/src/views/errors/: InternalError.vue  Loading.vue  NotFound.vue
static/css/: base.css
templates/: api.html  base.html  index.html
templates/auth/: register.html
