[tool.poetry]
name = "scientists-backend"
version = "0.1.0"
description = ""
authors = ["DavidOlmos03 <juanda_201001@hotmail.com>"]


[tool.poetry.dependencies]
python = ">=3.12,<3.13"
blinker = "1.8.2"
click = "8.1.7"
colorama = "0.4.6"
flask = "^3.0"
flask-cors = "5.0.0"
flask-wtf = "1.2.1"
gunicorn = "22.0.0"
itsdangerous = "2.2.0"
jinja2 = "3.1.4"
markupsafe = "2.1.5"
packaging = "24.1"
werkzeug = "3.0.3"
wtforms = "3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
